--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "watch:css": "chokidar 'styles/**/*.css' 'tailwind.config.js' --command 'npm run build:css'",
     "serve": "npx @11ty/eleventy --serve",
     "start": "concurrently 'npm run serve' 'npm run watch:css'",
-    "compile": "npx @11ty/eleventy"
+    "compile": "npx @11ty/eleventy",
+    "deploy": "npm run fetch; git commit -am \"new content\"; git push"
   },
   "repository": {
     "type": "git",
