--- a/notes/.obsidian/app.json
+++ b/notes/.obsidian/app.json
@@ -3,6 +3,6 @@
   "alwaysUpdateLinks": true,
   "attachmentFolderPath": "Files",
   "foldHeading": false,
-  "defaultViewMode": "preview",
+  "defaultViewMode": "source",
   "fileSortOrder": "byCreatedTime"
 }
